--- a/doc/paper/content/high.tex
+++ b/doc/paper/content/high.tex
@@ -1,4 +1,4 @@
-% !TEX root = ../paper.tex
+% !TEX root = ../FCT_radiation_paper.tex
 
 This section describes the entropy viscosity method applied to the scalar
 conservation law given by Equation \eqref{eq:scalar_model}. Recall that the entropy
