--- a/doc/paper/content/solution_bounds.tex
+++ b/doc/paper/content/solution_bounds.tex
@@ -1,4 +1,4 @@
-% !TEX root = ../paper.tex
+% !TEX root = ../FCT_radiation_paper.tex
 
 \subsubsection{Solution Bounds}\label{sec:solution_bounds}
 
