--- a/doc/paper/content/conclusions.tex
+++ b/doc/paper/content/conclusions.tex
@@ -8,14 +8,14 @@ where extraneous, inscatter, and fission sources are collected in the right-hand
 %
 The FCT methodology relies on a lower-order solution and a high-order solution. For the low-order
 solution, we have used a first-order viscosity approach, based on the graph-theoric method of
-Guermond at al. \cite{guermond_firstorder} for scalar conservation laws and extents these
+Guermond et al. \cite{guermond_firstorder} for scalar conservation laws and extends these
 previous works to situations with reaction and source terms present. The low-order scheme is shown
 to be positivity-preserving through the use of the M-matrix properties. The high-order solution
-is employs an entropy-based artificial stabilization. The entropy residual approach is derived
+employs an entropy-based artificial stabilization. The entropy residual approach is derived
 for the transport equation shown in Equation~\eqref{eq:ccl}.
 Temporal discretizations include explicit and implicit schemes in time, as well as steady state,
 the latter two cases making the FCT algorithm implicit as well. The standard Zalesak limiter is utilized
-to limit between the low- and the high-order solutions.
+to limit between the low- and high-order solutions.
 
 The FCT scheme described in this paper is second-order accurate in space,
 converges to the entropy solution, and preserves non-negativity.
@@ -43,7 +43,7 @@ the high-order method in FCT.
 
 The explicit temporal discretizations of the described FCT scheme yield a robust algorithm; however, implicit and steady-state discretizations
 are less robust, suffering from nonlinear convergence difficulties
-in some problems. % Implicit schemes become divergent as the CFL number is increased. 
+in some problems. % Implicit schemes become divergent as the CFL number is increased.
 The main complication with implicit and steady-state
 FCT schemes is that the imposed solution bounds are implicit with the solution,
 and thus the imposed solution bounds change with each iteration of the
