review of revised manuscript

--- a/doc/paper/FCT_radiation_paper.tex
+++ b/doc/paper/FCT_radiation_paper.tex
@@ -25,8 +25,7 @@
 \author[tamu]{Jean C. Ragusa}
 \ead{jean.ragusa@tamu.edu}
 
-\address[tamu]{Texas A\&M University,
-  400 Bizzell St,
+\address[tamu]{Department of Nuclear Engineering, Texas A\&M University,
   College Station, TX 77840}
 
 \input{content/abstract}
