--- a/doc/paper/content/introduction.tex
+++ b/doc/paper/content/introduction.tex
@@ -93,7 +93,7 @@ Maginot has recently developed a consistent set-to-zero (CSZ) LDFEM
 method \cite{maginot}, as well as a non-negative method for bilinear
 discontinuous FEM \cite{maginot_mc2015}\cite{maginot_2017}.
 
-In fluid dynamics, tradiational approaches to remedy the issue of spurious oscillations include
+In fluid dynamics, traditional approaches to remedy the issue of spurious oscillations include
 the flux-corrected transport (FCT) algorithm, introduced in 1973 as
 the SHASTA algorithm for finite difference discretizations
 by Boris and Book \cite{borisbook}, where it was applied to linear discontinuities
