--- a/doc/paper/content/results.tex
+++ b/doc/paper/content/results.tex
@@ -214,9 +214,9 @@ spurious oscillations. The EV scheme eliminates some of the first oscillations,
 but a number of oscillations of a similar magnitude to those produced by
 the Galerkin scheme still exists to the left of the interface.
 The sets ``$U^-$'' and ``$U^+$'' correspond to the minimum and maximum solution
-bounds, respectively, of each FCT scheme (the differences between the bounds of the two FCT
+bounds, respectively, of each FCT scheme (the differences between the bounds of the two FCT 
 schemes are insignificant here).
-schemes effectively eliminate spurious oscillations without approaching
+Both FCT schemes effectively eliminate spurious oscillations without approaching
 the level of unnecessary artificial diffusion achieved by the low-order
 scheme. For this test problem, the Galerkin-FCT solution is slightly
 superior to the EV-FCT solution and the ``terracing'' phenomenon
