--- a/doc/paper/content/low.tex
+++ b/doc/paper/content/low.tex
@@ -102,14 +102,14 @@ Steady-state:
 \end{equation}
 Explicit Euler:
 \begin{equation}\label{eq:low_fe}
-%  \M^L\frac{\U^{n+1} - \U^n}{\dt} + \A^L\U^n = \ssrhs^n \eqc
-   \M^L \U^{n+1} = \M^L \U^n + \dt \pr{ \ssrhs^n - \A^L\U^n } \eqc
+%  \M^L\frac{\U^{L,n+1} - \U^n}{\dt} + \A^L\U^n = \ssrhs^n \eqc
+   \M^L \U^{L,n+1} = \M^L \U^n + \dt \pr{ \ssrhs^n - \A^L\U^n } \eqc
 \end{equation}
 Theta scheme:
 \begin{equation}\label{eq:low_theta}
-  \pr{ \M^L +\theta \dt \A^L} U^{n+1}
+  \pr{ \M^L +\theta \dt \A^L} \U^{L,n+1}
     = \M^L \U^n  + \dt( \ssrhs^\theta  - \A^L (1-\theta)\U^n )\eqc
-%  \M^L\frac{\U^{n+1} - \U^n}{\dt} + \A^L\pr{\theta\U^{n+1} + (1-\theta)\U^n}
+%  \M^L\frac{\U^{L,n+1} - \U^n}{\dt} + \A^L\pr{\theta\U^{L,n+1} + (1-\theta)\U^n}
 %    = \ssrhs^\theta \eqc
 \end{equation}
 \end{subequations}
