ready to submit

--- a/doc/paper/cover-letter-rev.tex
+++ b/doc/paper/cover-letter-rev.tex
@@ -40,6 +40,10 @@ We believe that we have adequately addressed all of the Reviewer's questions and
 
 We remain available for any further questions, should there be any.
 
+
+Note that the JCP submission system uses all of our uploaded latex files, so you may see the {\bf revised manuscript twice}: once without any markups and once showing the markups between the current version and the first submission.
+
+
 \vspace{0.25cm}
 
 
