Made final changes before re-submit
Did the following:
* fixed one more "H" superscript typo
* added missing changes to response-to-reviewer table and regenerated its pdf
* regenerated diff document

--- a/doc/paper/content/high.tex
+++ b/doc/paper/content/high.tex
@@ -133,7 +133,7 @@ Explicit Euler:
 \end{equation}
 Theta scheme:
 \begin{equation}\label{eq:high_theta}
-  \M^C\frac{\U^{H,n+1} - \U^n}{\dt} + \theta\A^{H,n+1}\U^{n+1}
+  \M^C\frac{\U^{H,n+1} - \U^n}{\dt} + \theta\A^{H,n+1}\U^{H,n+1}
     + (1-\theta)\A^{H,n}\U^n
     = \ssrhs^\theta \eqc
 \end{equation}
