--- a/doc/paper/response_to_reviewers-rev1.tex
+++ b/doc/paper/response_to_reviewers-rev1.tex
@@ -15,7 +15,7 @@ Thank you for your thorough review of our manuscript.
 
 The changes made with regard to your comments are summarized in the following
 tables. Page, paragraph, and line numbers reference
-the ``diff'' PDF document (which shows both deleted and added content between the original submission and this revised submission). 
+the ``diff'' PDF document (which shows both deleted and added content between the original submission and this revised submission).
 
 In the tables on the next pages, the listed paragraph number does not necessarily correspond to the actual paragraph number
 but rather the number of the textual ``blocks''; for example, displayed equations
@@ -69,18 +69,21 @@ wording, missing details, etc.:
 \begin{tabular}{c c c c p{3in}}
 \emph{Item} & \emph{Page} & \emph{Par.} & \emph{Line} & \emph{Change}\\\hline
 1 & 2 & 4 & 6 & changed ``Equations (3)'' to ``the system given by Equation (3)''\\
-2 & 9  & (21) & - & Added $L$ superscript to denote low-order solution, to be consistent with later sections\\
-3 & 14 & (34) & - & Added $H$ superscript to denote high-order solution, to be consistent with later sections\\
-4 & 15 & 1 & 2 & Added appositive for low-order solution, as is already done for high-order solution in this sentence\\
-5 & 15 & 1 & 2 & Changed period to colon as intended; Equation (36) is part of the statement\\
-6 & 15 & (37c) & - & Fixed superscript on ambiguous $\mathbf{U}^{n+1}$ solution to be $H$, as originally intended\\
-7 & 18 & 3 & 1 & changed unusual grammar: ``the Zalesak's limiter'' to ``the Zalesak limiter''\\
-8 & 23 & 3 & 2 & gave the mesh size and end time used for the study\\
-9 & 24 & 1 & 16 & removed ``easily'' from ``easily mitigated''; the word was unnecessary and expressed opinion\\
-10 & 27 & 2 & 8 & added comment about $U^-$ and $U^+$, as for comment 16\\
-11 & 29 & 2 & 5 & fixed typo: ``at al.'' to ``et al.''\\
-12 & 29 & 2 & 6 & fixed typo: ``extents these'' to ``extends these''\\
-13 & 29 & 2 & -2 & improved grammar: ``the low- and the high-order'' to ``the low- and high-order''.
+2 & 3 & 3 & 1 & fixed typo: ``tradiational'' to ``traditional''\\
+3 & 9  & (21) & - & Added $L$ superscript to denote low-order solution, to be consistent with later sections\\
+4 & 14 & (34) & - & Added $H$ superscript to denote high-order solution, to be consistent with later sections\\
+5 & 15 & 1 & 2 & Added appositive for low-order solution, as is already done for high-order solution in this sentence\\
+6 & 15 & 1 & 2 & Changed period to colon as intended; Equation (36) is part of the statement\\
+7 & 15 & (36c) & - & Fixed superscript on ambiguous $\mathbf{U}^{n+1}$ solution to be $H$, as originally intended\\
+8 & 15 & (37c) & - & Fixed superscript on ambiguous $\mathbf{U}^{n+1}$ solution to be $H$, as originally intended\\
+9 & 16 & (39c) & - & Fixed superscript on ambiguous $\mathbf{U}^{n+1}$ solution to be $H$, as originally intended\\
+10 & 18 & 3 & 1 & changed unusual grammar: ``the Zalesak's limiter'' to ``the Zalesak limiter''\\
+11 & 23 & 3 & 2 & gave the mesh size and end time used for the study\\
+12 & 24 & 1 & 16 & removed ``easily'' from ``easily mitigated''; the word was unnecessary and expressed opinion\\
+13 & 27 & 2 & 8 & added comment about $U^-$ and $U^+$, as for comment 16\\
+14 & 29 & 2 & 5 & fixed typo: ``at al.'' to ``et al.''\\
+15 & 29 & 2 & 6 & fixed typo: ``extents these'' to ``extends these''\\
+16 & 29 & 2 & -2 & improved grammar: ``the low- and the high-order'' to ``the low- and high-order''.
   The second ``the'' interrupted the hyphenation of ``low-order''.\\
 \end{tabular}
 
